added functions transmission with endpoint
